# dial9-tokio-telemetry

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  netlify.toml  release-plz.toml
.github/workflows/: benchmarks.yml  build.yml  check-docs.yml  ci.yml  e2e-trace-integrity-and-analysis.yml  format.yml  stress-test.yml
dial9-tokio-telemetry/: Cargo.toml  README.md  TRACE_ANALYSIS_GUIDE.md  serve.py
dial9-tokio-telemetry/benches/: .#overhead_bench.rs  bmf.rs  e2e_workload.rs  flush_path.rs  overhead_bench.rs  threadlocal_encode.rs  writer_encode.rs
dial9-tokio-telemetry/design/: tokio-telemetry-system.md
dial9-tokio-telemetry/examples/: analyze_trace.rs  blocking_pool_tracking.rs  blocking_sleep.rs  cancelled_task.rs  completing_task.rs  cpu_profile_workload.rs  kernel_sched_events.rs  long_sleep.rs  long_workload.rs  realistic_workload.rs  s3_stress_test.rs  simple_workload.rs  telemetry_demo.rs  telemetry_rotating.rs  thread_per_core.rs  (+2 more)
dial9-trace-format/: Cargo.toml  README.md  SPEC.md
dial9-trace-format-derive/: Cargo.toml
dial9-trace-format-derive/src/: lib.rs
dial9-trace-format-derive/src/snapshots/: dial9_trace_format_derive__tests__all_field_types.snap  dial9_trace_format_derive__tests__doc_comments_copied_to_ref_fields.snap  dial9_trace_format_derive__tests__empty_event.snap  dial9_trace_format_derive__tests__simple_event.snap  dial9_trace_format_derive__tests__timestamp_attribute.snap
dial9-trace-format/benches/: codec.rs
dial9-trace-format/examples/: format_comparison.rs
dial9-trace-format/fuzz/: Cargo.toml
dial9-trace-format/fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_round_trip.rs  fuzz_structured_round_trip.rs
dial9-trace-format/js/: decode.js
dial9-trace-format/src/: codec.rs  decoder.rs  encoder.rs  leb128.rs  lib.rs  schema.rs  types.rs
dial9-trace-format/tests/: derive_round_trip.rs  js_parser.rs  round_trip.rs  spec_edge_cases.rs  threadlocal_encoding.rs
dial9-viewer/: Cargo.toml  README.md  serve.py
perf-self-profile/: Cargo.toml
progress/: dial9-viewer-progress.md
scripts/: e2e-trace-tests.sh  regenerate_demo_trace.sh
(+65 files in other folders)
