[workspace]
resolver = "3"
members = [
    "dial9-tokio-telemetry",
    "dial9-trace-format",
    "dial9-trace-format-derive",
    "perf-self-profile",
    "examples/metrics-service",
]
exclude = [
    "dial9-trace-format/fuzz",
]

[workspace.package]
version = "0.1.1"

[workspace.dependencies]
libc = "0.2"
dial9-perf-self-profile = { version = "0.1.1", path = "perf-self-profile" }

[profile.release]
debug = 1
